--- a/RayTracingOneWeek/3.TheVec3Class/3.TheVec3Class.vcxproj
+++ b/RayTracingOneWeek/3.TheVec3Class/3.TheVec3Class.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="color.h" />
     <ClInclude Include="hittable.h" />
     <ClInclude Include="hittable_list.h" />
+    <ClInclude Include="material.h" />
     <ClInclude Include="PPM.h" />
     <ClInclude Include="ray.h" />
     <ClInclude Include="rtweekend.h" />
